--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OriginSix</title>
-
+    <!-- icons -->
+    <link rel="stylesheet" href="assets/fonts/style.css" />
     <!-- style -->
     <link rel="stylesheet" href="style.css" />
     <!-- fonts -->
@@ -20,7 +21,17 @@
     <header id="header">
       <nav class="container">
         <a class="logo" href="#">beauty<span>salon</span>.</a>
-        <div>...</div>
+        <div class="menu">
+          <ul class="grid">
+            <li><a class="title" href="#home">inicio</a></li>
+            <li><a class="title" href="#about">Sobre</a></li>
+            <li><a class="title" href="#services">Serviços</a></li>
+            <li><a class="title" href="#testimonials">Depoimento</a></li>
+            <li><a class="title" href="#contatec">Contato</a></li>
+          </ul>
+        </div>
+        <div class="toggle icon-menu"></div>
+        <div class="toggle icon-close"></div>
       </nav>
     </header>
     <main>
@@ -33,7 +44,7 @@
             />
           </div>
           <div class="text">
-            <h1>Saúde natural para os seus cabelos</h1>
+            <h2 class="title">Saúde natural para os seus cabelos</h2>
             <p>
               Um salão exclusivo em São Paulo, especializado em tratamentos
               naturais.
@@ -47,5 +58,7 @@
         <div class="container">outra div</div>
       </section>
     </main>
+
+    <script src="main.js"></script>
   </body>
 </html>
