segunda aula - ok

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     />
   </head>
   <body>
+    <!-- o scroll só vai aparecer com o js -->
     <header id="header">
       <nav class="container">
         <a class="logo" href="#">beauty<span>salon</span>.</a>
@@ -34,6 +35,7 @@
         <div class="toggle icon-close"></div>
       </nav>
     </header>
+
     <main>
       <section class="section" id="home">
         <div class="container grid">
@@ -53,10 +55,89 @@
           </div>
         </div>
       </section>
+
       <div class="divider-1"></div>
-      <section class="section">
-        <div class="container">outra div</div>
+
+      <section class="section" id="about">
+        <div class="container grid">
+          <div class="image">
+            <img
+              src="https://images.unsplash.com/photo-1559599101-f09722fb4948?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+              alt="3 mulheres sorrindo"
+            />
+          </div>
+          <div class="text">
+            <h2 class="title">Sobre nós</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio sit
+              aliquam fuga temporibus porro exercitationem, voluptates non in
+              aut minus quam! Impedit repellendus fugit et possimus voluptate in
+              illo inventore?
+            </p>
+            <br />
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi
+              harum exercitationem reprehenderit veniam facilis id similique
+              laudantium non animi odio reiciendis a sunt, consequatur dolores
+              at ducimus, maiores nobis temporibus!
+            </p>
+            <br />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
+              perspiciatis voluptatibus accusantium nulla nisi corporis dolor
+              sint, minus molestias adipisci vel facere esse eius iste maiores
+              optio impedit. Consectetur, atque?
+            </p>
+          </div>
+        </div>
       </section>
+
+      <div class="divider-2"></div>
+
+      <section class="section" id="services">
+        <div class="container grid">
+          <header>
+            <h2 class="title">Serviços</h2>
+            <p>
+              Com mais de 10 anos no mercado, o <strong>Beautysalon</strong> já
+              conquistou clientes de inúmeros países com seus tratamentos
+              exclusivos e totalmente naturais
+            </p>
+          </header>
+
+          <div class="cards grid">
+            <div class="card">
+              <div class="icon-woman-hair"></div>
+              <h3 class="title">Terapia capilar</h3>
+              <p>
+                Terapia completa para couro cabeludo e fios, protegendo todos os
+                tipos de cabelos, inclusive os longos e finos.
+              </p>
+            </div>
+            <div class="card">
+              <div class="icon-trim"></div>
+              <h3 class="title">Cortes</h3>
+              <p>
+                O beautysalon conta com diversos tratamentos naturais e
+                totalmente veganos, para qualquer tipo de cabelo.
+              </p>
+            </div>
+            <div class="card">
+              <div class="icon-cosmetic"></div>
+              <h3 class="title">Tratamentos</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Suscipit aliquam nihil vitae ducimus, ullam inventore unde
+                similique asperiores illum odit?
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <div class="divider-1"></div>
+
+      <section class="section">se</section>
     </main>
 
     <script src="main.js"></script>
