--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- o scroll só vai aparecer com o js -->
     <header id="header">
       <nav class="container">
-        <a class="logo" href="#">beauty<span>salon</span>.</a>
+        <a class="logo" href="#home">beauty<span>salon</span>.</a>
         <div class="menu">
           <ul class="grid">
             <li><a class="title" href="#home">inicio</a></li>
@@ -239,7 +239,33 @@
           </div>
         </div>
       </section>
+
+      <div class="divider-1"></div>
     </main>
+
+    <footer class="section">
+      <div class="container grid">
+        <div class="brand">
+          <a href="#home" class="logo logo-alt">beauty<span>salon</span>.</a>
+          <p>©2021 Beautysalon.</p>
+          <p>Todos os direitos reservados.</p>
+        </div>
+        <div class="social">
+          <a href="https://instagram.com" target="_blank">
+            <i class="icon-instagram"></i>
+          </a>
+          <a href="https://facebook.com" target="_blank">
+            <i class="icon-facebook"></i>
+          </a>
+          <a href="https://youtube.com" target="_blank">
+            <i class="icon-youtube"></i>
+          </a>
+        </div>
+      </div>
+    </footer>
+
+    <a href="#home" class="back-to-top"><i class="icon-arrow-up"></i></a>
+
     <!-- swiper -->
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
