--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OriginSix</title>
     <!-- icons -->
-    <link rel="stylesheet" href="assets/fonts/style.css" />
+    <link rel="stylesheet" href="assets/fonts/style.css" / >
     <!-- swiper -->
     <link
       rel="stylesheet"
@@ -74,10 +74,11 @@
           <div class="text">
             <h2 class="title">Sobre nós</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio sit
-              aliquam fuga temporibus porro exercitationem, voluptates non in
-              aut minus quam! Impedit repellendus fugit et possimus voluptate in
-              illo inventore?
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Suspendisse sagittis arcu quis nisi luctus, id accumsan felis
+              tristique. Proin quis bibendum diam. Sed consequat nisl laoreet
+              eros ultricies pellentesque. Nullam in est porta, pellentesque
+              massa vitae, vehicula risus.
             </p>
             <br />
             <p>
